force-app/main/default/objects/Service_Desk__c/Service_Desk__c.object-meta.xml
<CustomObject>
    <label>Service Desk</label>
    <nameField>
        <label>Service Desk</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Desk</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>