force-app/main/default/objects/Service_Desk__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>חשבון</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Desk</relationshipLabel>
    <relationshipName>Service_Desk</relationshipName>
    <type>Lookup</type>
</CustomField>