force-app/main/default/objects/Service_Desk__c/fields/Awaiting_Mail__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>שליחת מייל למשתמש</label>
    <type>Checkbox</type>
</CustomField>