force-app/main/default/objects/Service_Desk__c/fields/Awaiting_User_Time__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_User_Time__c</fullName>
    <label>Awaiting User Time</label>
    <type>DateTime</type>
</CustomField>