force-app/main/default/objects/Service_Desk__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>סיילספורס</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
            <value>
                <fullName>אינטרנט</fullName>
            </value>
            <value>
                <fullName>הרשאות</fullName>
            </value>
            <value>
                <fullName>חדר ישיבות</fullName>
            </value>
            <value>
                <fullName>חיבור מרחוק</fullName>
            </value>
            <value>
                <fullName>מדפסות וסורקים</fullName>
            </value>
            <value>
                <fullName>מחשב</fullName>
            </value>
            <value>
                <fullName>משתמש</fullName>
            </value>
            <value>
                <fullName>פקס</fullName>
            </value>
            <value>
                <fullName>ציוד</fullName>
            </value>
            <value>
                <fullName>תוכנות עבודה</fullName>
            </value>
            <value>
                <fullName>תיקיות וקבצים</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>משאבי אנוש</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
                <isActive>false</isActive>
                <label>אחר</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>