force-app/main/default/objects/Service_Desk__c/fields/Close_3CX__c.field-meta.xml
<CustomField>
    <fullName>Close_3CX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>סגירת שלוחה 3CX/הסרה מקבוצה</label>
    <type>Checkbox</type>
</CustomField>