force-app/main/default/objects/Service_Desk__c/fields/Closing_Time__c.field-meta.xml
<CustomField>
    <fullName>Closing_Time__c</fullName>
    <label>Closing Time</label>
    <type>DateTime</type>
</CustomField>