force-app/main/default/objects/Service_Desk__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>חשבון הלקוח</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Desk (חשבון)</relationshipLabel>
    <relationshipName>ServiceDesk_Account</relationshipName>
    <type>Lookup</type>
</CustomField>