force-app/main/default/objects/Service_Desk__c/fields/DeliveryTime__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>תיאום מסירת ציוד</label>
    <type>Checkbox</type>
</CustomField>