force-app/main/default/objects/Service_Desk__c/fields/Direct_Manager__c.field-meta.xml
<CustomField>
    <fullName>Direct_Manager__c</fullName>
    <formula>Owner:User.Direct_Manager__r.Contact_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Manager</label>
    <type>Text</type>
</CustomField>