force-app/main/default/objects/Service_Desk__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>תאריך חזרה לארץ</label>
    <type>Date</type>
</CustomField>