force-app/main/default/objects/Service_Desk__c/fields/English_Full_Name_del__c.field-meta.xml
<CustomField>
    <fullName>English_Full_Name_del__c</fullName>
    <label>שם מלא באנגלית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>