force-app/main/default/objects/Service_Desk__c/fields/Groups_Block__c.field-meta.xml
<CustomField>
    <fullName>Groups_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <label>החרגה מקבוצות</label>
    <type>Checkbox</type>
</CustomField>