force-app/main/default/objects/Service_Desk__c/fields/HD_Case__c.field-meta.xml
<CustomField>
    <fullName>HD_Case__c</fullName>
    <displayFormat>Case-{0000}</displayFormat>
    <label>HD Case</label>
    <type>AutoNumber</type>
</CustomField>