force-app/main/default/objects/Service_Desk__c/fields/In_Service_Time__c.field-meta.xml
<CustomField>
    <fullName>In_Service_Time__c</fullName>
    <formula>IF(
Closing_Time__c - Reaction_Time__c  &gt; 0 ,
TEXT( FLOOR( Closing_Time__c - Reaction_Time__c ) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD( (Closing_Time__c - Reaction_Time__c ) * 24, 24 ) ) ) &amp; &quot; hours &quot;
&amp; TEXT( ROUND( MOD( (Closing_Time__c - Reaction_Time__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Service Time</label>
    <type>Text</type>
</CustomField>