force-app/main/default/objects/Service_Desk__c/fields/LaptopDelivery__c.field-meta.xml
<CustomField>
    <fullName>LaptopDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>מסירת ציוד והדרכה לעובד</label>
    <type>Checkbox</type>
</CustomField>