force-app/main/default/objects/Service_Desk__c/fields/LaptopPrep__c.field-meta.xml
<CustomField>
    <fullName>LaptopPrep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>הכנת מחשב</label>
    <type>Checkbox</type>
</CustomField>