force-app/main/default/objects/Service_Desk__c/fields/NewUser365__c.field-meta.xml
<CustomField>
    <fullName>NewUser365__c</fullName>
    <defaultValue>false</defaultValue>
    <label>הקמת משתמש 365</label>
    <type>Checkbox</type>
</CustomField>