force-app/main/default/objects/Service_Desk__c/fields/NewUserSalesforce__c.field-meta.xml
<CustomField>
    <fullName>NewUserSalesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>הקמת משתמש Salesforce</label>
    <type>Checkbox</type>
</CustomField>