force-app/main/default/objects/Service_Desk__c/fields/Org_Email__c.field-meta.xml
<CustomField>
    <fullName>Org_Email__c</fullName>
    <label>כתובת המייל שהוקמה</label>
    <type>Email</type>
</CustomField>