force-app/main/default/objects/Service_Desk__c/fields/Permission_Block__c.field-meta.xml
<CustomField>
    <fullName>Permission_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <label>חסימת הרשאות</label>
    <type>Checkbox</type>
</CustomField>