force-app/main/default/objects/Service_Desk__c/fields/Reaction_Time__c.field-meta.xml
<CustomField>
    <fullName>Reaction_Time__c</fullName>
    <label>Reaction Time</label>
    <type>DateTime</type>
</CustomField>