force-app/main/default/objects/Service_Desk__c/fields/Responsible_Employee__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Help_Desk</relationshipName>
    <type>Lookup</type>
</CustomField>