force-app/main/default/objects/Service_Desk__c/fields/SalesforceUserBlock__c.field-meta.xml
<CustomField>
    <fullName>SalesforceUserBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>סגירת משתמש Salesforce</label>
    <type>Checkbox</type>
</CustomField>