force-app/main/default/objects/Service_Desk__c/fields/ScreenShot__c.field-meta.xml
<CustomField>
    <fullName>ScreenShot__c</fullName>
    <label>ScreenShot</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>