force-app/main/default/objects/Service_Desk__c/fields/SecurityTutoring__c.field-meta.xml
<CustomField>
    <fullName>SecurityTutoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>שליחת לומדה - אבטחת מידע</label>
    <type>Checkbox</type>
</CustomField>