force-app/main/default/objects/Service_Desk__c/fields/Start_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_End_Date__c</fullName>
    <label>תאריך תחילת/סיום עבודה</label>
    <type>Date</type>
</CustomField>