force-app/main/default/objects/Service_Desk__c/fields/StationPrep__c.field-meta.xml
<CustomField>
    <fullName>StationPrep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>הקמת עמדה</label>
    <type>Checkbox</type>
</CustomField>