force-app/main/default/objects/Service_Desk__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>חדשה</fullName>
                <default>true</default>
                <label>חדשה</label>
            </value>
            <value>
                <fullName>בטיפול</fullName>
            </value>
            <value>
                <fullName>ממתין למענה המשתמש</fullName>
            </value>
            <value>
                <fullName>סגורה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>