force-app/main/default/objects/Service_Desk__c/fields/Strat_Date__c.field-meta.xml
<CustomField>
    <fullName>Strat_Date__c</fullName>
    <label>תאריך יציאה מהארץ</label>
    <type>Date</type>
</CustomField>