force-app/main/default/objects/Service_Desk__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2TEAM</fullName>
            </value>
            <value>
                <fullName>3CX</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>PDF/TIF</fullName>
            </value>
            <value>
                <fullName>אוזניות</fullName>
            </value>
            <value>
                <fullName>אי התאמה בין דיווח לפרודוקציה</fullName>
            </value>
            <value>
                <fullName>איפוס/החלפת סיסמה</fullName>
            </value>
            <value>
                <fullName>ארכיון</fullName>
            </value>
            <value>
                <fullName>אתר חסום</fullName>
            </value>
            <value>
                <fullName>אתר לא עובד</fullName>
            </value>
            <value>
                <fullName>בבילון</fullName>
            </value>
            <value>
                <fullName>ביטול נעילת פוליסה</fullName>
            </value>
            <value>
                <fullName>בירור והקמת הסכם סוכני משנה</fullName>
            </value>
            <value>
                <fullName>בירור עמלות</fullName>
            </value>
            <value>
                <fullName>דפדפן</fullName>
            </value>
            <value>
                <fullName>דרישה כללית</fullName>
                <isActive>false</isActive>
                <label>דרישה כללית</label>
            </value>
            <value>
                <fullName>הגדרות תצוגה/שפה</fullName>
            </value>
            <value>
                <fullName>הגדרת חתימה</fullName>
            </value>
            <value>
                <fullName>הגדרת כתובות מייל לסריקה</fullName>
            </value>
            <value>
                <fullName>הגדרת מדפסת</fullName>
            </value>
            <value>
                <fullName>הגדרת מענה אוטומטי</fullName>
            </value>
            <value>
                <fullName>הגדרת פקס במחשב</fullName>
            </value>
            <value>
                <fullName>הודעת Bit Locker בהעלאת המחשב</fullName>
            </value>
            <value>
                <fullName>הוספת מרכז רווח בדיווח</fullName>
            </value>
            <value>
                <fullName>החלפת מקלדת</fullName>
            </value>
            <value>
                <fullName>החלפת עכבר</fullName>
            </value>
            <value>
                <fullName>העברת בעלות ברשומות</fullName>
            </value>
            <value>
                <fullName>העברת מקום</fullName>
            </value>
            <value>
                <fullName>העברת פוליסות בין חשבונות</fullName>
            </value>
            <value>
                <fullName>העברת תיוקים בין חשבונות/פוליסות</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>