force-app/main/default/objects/Service_Desk__c/fields/TEST__c.field-meta.xml
<CustomField>
    <fullName>TEST__c</fullName>
    <formula>ROUND( 10 * (
   ( 5 * FLOOR( ( DATEVALUE( Reaction_Time__c) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( Reaction_Time__c ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 10 * ( MOD( Reaction_Time__c - DATETIMEVALUE( &apos;1900-01-08 18:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( Closing_Time__c  ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( Closing_Time__c ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 10 * ( MOD( Closing_Time__c  - DATETIMEVALUE( &apos;1900-01-08 16:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>