force-app/main/default/objects/Service_Desk__c/fields/User365Block__c.field-meta.xml
<CustomField>
    <fullName>User365Block__c</fullName>
    <defaultValue>false</defaultValue>
    <label>סגירת משתמש 365</label>
    <type>Checkbox</type>
</CustomField>