force-app/main/default/objects/Service_Desk__c/fields/X3CX__c.field-meta.xml
<CustomField>
    <fullName>X3CX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>הקמת שלוחה 3CX/שיוך לקבוצה</label>
    <type>Checkbox</type>
</CustomField>