force-app/main/default/objects/Service_Desk__c/recordTypes/Help_Desk_Admin.recordType-meta.xml
<RecordType>
    <fullName>Help_Desk_Admin</fullName>
    <active>true</active>
    <label>Help Desk Admin</label>
</RecordType>