force-app/main/default/objects/Service_Desk__c/recordTypes/Help_Desk_User.recordType-meta.xml
<RecordType>
    <fullName>Help_Desk_User</fullName>
    <active>true</active>
    <label>Help Desk User</label>
</RecordType>