force-app/main/default/objects/Service_Desk__c/recordTypes/HR_Process.recordType-meta.xml
<RecordType>
    <fullName>HR_Process</fullName>
    <active>true</active>
    <label>HR</label>
</RecordType>