force-app/main/default/objects/Service_Desk__c/validationRules/AbroadPermission_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>AbroadPermission_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(ISPICKVAL( Sub_Category__c, &quot;פתיחת הרשאות בחול&quot;),(Description__c ==&quot;&quot; ) &amp;&amp; ISBLANK( Strat_Date__c ) &amp;&amp; ISBLANK( End_Date__c ) 
)</errorConditionFormula>
    <errorMessage>יש לציין את היעד ותאריכי הנסיעה</errorMessage>
</ValidationRule>