force-app/main/default/objects/Service_Desk__c/validationRules/CustomerAccount_CantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomerAccount_CantBeBlank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Customer_Account__c),
OR(ISPICKVAL( Sub_Category__c, &quot;סיוע בדיווחים&quot;),
ISPICKVAL( Sub_Category__c, &quot;מחיקת כפילויות&quot;), ISPICKVAL( Sub_Category__c, &quot;סגירת הצעות/פוטנציאלים&quot;), ISPICKVAL( Sub_Category__c, &quot;תיקון שכט/עמלה בדיווח&quot;),ISPICKVAL( Sub_Category__c, &quot;אי התאמה בין דיווח לפרודוקציה&quot;),
ISPICKVAL( Sub_Category__c, &quot;תקבולים ממבטחים&quot;), ISPICKVAL( Sub_Category__c, &quot;בירור עמלות&quot;), ISPICKVAL( Sub_Category__c, &quot;העברת פוליסות בין חשבונות&quot;),
ISPICKVAL( Sub_Category__c, &quot;בירור והקמת הסכם סוכני משנה&quot;), ISPICKVAL( Sub_Category__c, &quot;הקמת משתמש בחברות ביטוח&quot;)
))</errorConditionFormula>
    <errorMessage>נא עדכן את חשבון הלקוח הרלוונטי לקריאה</errorMessage>
</ValidationRule>