force-app/main/default/objects/Service_Desk__c/validationRules/New_Employee_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Employee_Email</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NewUser365__c = TRUE)&amp;&amp;(ISBLANK( Org_Email__c))</errorConditionFormula>
    <errorDisplayField>Org_Email__c</errorDisplayField>
    <errorMessage>נא עדכן את כתובת המייל שהוקמה</errorMessage>
</ValidationRule>