force-app/main/default/objects/Service_Desk__c/validationRules/Send_a_Link.validationRule-meta.xml
<ValidationRule>
    <fullName>Send_a_Link</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Link__c),(OR(ISPICKVAL( Sub_Category__c, &quot;מחיקת רשומות&quot;), ISPICKVAL(Sub_Category__c, &quot;העברת תיוקים בין חשבונות/פוליסות&quot;), ISPICKVAL(Sub_Category__c, &quot;העברת משימות/תביעות&quot;), ISPICKVAL(Sub_Category__c, &quot;מיזוג חשבונות&quot;), ISPICKVAL(Sub_Category__c, &quot;ביטול נעילת פוליסה&quot;), ISPICKVAL(Sub_Category__c, &quot;סיוע בדיווחים&quot;),
ISPICKVAL(Sub_Category__c, &quot;מחיקת כפילויות&quot;),
ISPICKVAL(Sub_Category__c, &quot;סגירת הצעות/פוטנציאלים&quot;),
ISPICKVAL(Sub_Category__c, &quot;תיקון שכט/עמלה בדיווח&quot;),
ISPICKVAL(Sub_Category__c, &quot;אי התאמה בין דיווח לפרודוקציה&quot;),
ISPICKVAL(Sub_Category__c, &quot;העברת פוליסות בין חשבונות&quot;),
ISPICKVAL(Sub_Category__c, &quot;הוספת מרכז רווח בדיווח&quot;),
ISPICKVAL(Sub_Category__c, &quot;העברת בעלות ברשומות&quot;),
ISPICKVAL(Sub_Category__c, &quot;תקלות דיווח&quot;),
ISPICKVAL(Sub_Category__c, &quot;שינויים לדוח קיים&quot;)
)))</errorConditionFormula>
    <errorMessage>נא להוסיף קישור לרשומה</errorMessage>
</ValidationRule>