force-app/main/default/objects/Service_Desk__c/listViews/Closed_Cases.listView-meta.xml
<ListView>
    <fullName>Closed_Cases</fullName>
    <columns>NAME</columns>
    <columns>Sub_Category__c</columns>
    <columns>Status__c</columns>
    <columns>Responsible_Team__c</columns>
    <columns>SLA__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>סגורה</value>
    </filters>
    <label>הקריאות הסגורות שלי</label>
</ListView>